fix bug overlapping label

--- a/src/components/gallery-item/gallery-item.styles.css
+++ b/src/components/gallery-item/gallery-item.styles.css
@@ -17,6 +17,10 @@
     transition: 0.3s;
 }
 
+.gallery-item .gallery__title {
+    word-wrap: break-word;
+}
+
 .gallery-item > .overlay:hover {
     opacity: 1;
 }
